[package]
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
description = "Easily switch between common values for arbitrary environment variables"
edition = "2021"
keywords = ["env", "environment", "export"]
license = "MIT"
name = "env-select"
repository = "https://github.com/LucasPickering/env-select"
# Keep in sync w/ rust-toolchain.toml
rust-version = "1.72.0"
version = "0.11.0"

[[bin]]
name = "env-select"
path = "src/main.rs"

[dependencies]
anyhow = {version = "^1.0.65", features = ["backtrace"]}
clap = {version = "^4.4.0", features = ["derive"]}
ctrlc = "^3.2.3"
derive_more = "^0.99.17"
dialoguer = {version = "^0.10.2", default-features = false}
dotenv-parser = {version = "0.1.3", default-features = false}# Pinned because unpopular
env_logger = {version = "^0.10.0", default-features = false, features = ["auto-color"]}
indexmap = {version = "^2.0.0", features = ["serde"]}
log = "^0.4.17"
serde = {version = "^1.0.145", default-features = false, features = ["derive"]}
termcolor = "^1.2.0"
toml = {version = "^0.7.5", features = ["preserve_order"]}

[dev-dependencies]
assert_cmd = {version = "^2.0.11", default-features = false, features = ["color-auto"]}
pretty_assertions = "^1.4.0"
rstest = {version = "^0.18.2", default-features = false}
rstest_reuse = "^0.6.0"
serde_test = "^1.0.165"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.6.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Publish jobs to run in CI
publish-jobs = ["homebrew", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "LucasPickering/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]

[workspace.metadata.release]
# https://github.com/crate-ci/cargo-release/blob/master/docs/reference.md
allow-branch = ["master"] 
pre-release-replacements = [
  {file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}"},
  {file = "CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}"},
] 
publish = false # CI will handle this
